<resources>
    <string name="app_name">Historical Museum</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment"></string>

    <!-- STRINGS FOR FRAGMENT_ABOUT_MUSEUM -->

    <string name="about1">ABOUT MUSEUM</string>

    <string name="about2">
           The Historical Museum of Bosnia and Herzegovina aims to collect, preserve, explore, present, and promote the cultural and historical heritage of Bosnia and Herzegovina. From its founding in 1945 until 1993, the Museum remained thematically focused on the history of antifascism during World War II and the cultivation of socialist state values. The name of the Museum, once Museum of the Revolution of Bosnia and Herzegovina, has changed several times, but it has always been recognizable. After being renamed the History Museum in 1993, the thematic structure of the Museum has also changed. Now the aim is to study the history of Bosnia and Herzegovina from the Middle Ages to present times.\n\n
    </string>

    <string name="about3">
           The Historical Museum of Bosnia and Herzegovina is a unique cultural institution in Bosnia and Herzegovina which has become a space for dialogue about the past and different aspects of remembrance. The museum develops different programs and activities in order to help visitors talk about the past, present, and future through the museum collections.\n\n
    </string>

    <string name="about4">
        The building of the History Museum of Bosnia and Herzegovina was designed in 1959 by Boris Magaš, Edo Šmidihen, and Radovan Horvat. It is a unique example of the international style in architecture; its dominant cube forms and clean lines stand out in the panorama of the city of Sarajevo.\n\n
    </string>

    <string name="about5">
        Prof. Stjepan Roš wrote about the uniqueness and the architectural values of the Museum:\n
    </string>

    <string name="about6">
        “The building of the Museum of the Revolution manifests  the pure architecture of Mies van der Rohe. It is constructed of “boxes,” transparent and full. The glass-lined breathable skeleton stretches on a white stone pedestal, on which rests a full stone box. The neoplastic structure has the effect of lightness and balance and is reminiscent of El Lissitzky Proun. Spaces are extroverted, clearly oriented towards the inner garden. Nine columns — slender trees — contradict their own actual function because it looks like they break through and do not support. Free placement of walls gives the impression of moving billboards and an “open free plan.” (Oris)\n\n
    </string>

    <string name="about7">
        An interesting story about the idea for the appearance of the Museum building relates:\n
    </string>

    <string name="about8">
        “Boris Magas has thought a lot how the Museum of the Revolution in Sarajevo should look. When the idea was born, the only paper that he had beside him was the toilet paper. That is how the basic outlines of the future Museum of the Revolution, today the Museum of History, were created. Later he developed the idea with Edo Šmidihen and Radovan Horvat. It was in 1964, he was less than 28 years old, he knew a lot about the theory of architecture, but had little concrete construction experience behind him. Shortly afterward he graduated. The exhibition rooms are cubic volumes that rise above an almost completely glazed ground, as he described the abstract, modernist building that is quite different from his later works.” (Jutarnji List, Hrvatska)\n
    </string>

    <!-- END STRINGS FOR FRAGMENT_ABOUT_MUSEUM -->


    <!-- STRINGS FOR FRAGMENT_INFO -->

    <string name="info1">
            Address:\nZmaja od Bosne 5, 71 000 Sarajevo

    </string>

    <string name="info11">
            Admission:\n
            Adults: 5KM\n
            School groups: 2KM\n
            Persons\nwith disabilities: 1KM\n

    </string>

    <string name="info12">
            Guided tour:\n
            English: 30KM\n
            Bosnian: 20KM\n

    </string>

    <string name="info2">
        Working hours:\n09:00 - 19:00

    </string>

    <string name="info3">
        Phone:\n+387 33 226 098\n+387 33 210 416
    </string>

    <string name="info4">
        Director:\nElma Hasimbegovic
    </string>

    <string name="info5">
        E-mail:\nhistmuz@bih.net.ba\nhasimbegovic@muzej.ba

    </string>

    <!-- END STRINGS FOR FRAGMENT_INFO -->


    <!-- STRINGS FOR FRAGMENT_SUPPORT_US -->

    <string name="support1">
        JOIN US
    </string>

    <string name="support2">
         SUPPORT MUSEUM
    </string>

    <string name="support3">
        “Even a modest donation will help keep the Louvre’s exceptional heritage alive. Thank you for your generosity, a true anchor of support for our projects.\nJean-Luc Martinez, President-Director of the Musée du Louvre\n\n
    </string>

    <string name="support4">
        Individual support\n\n
        No matter how large or small, private donations are an important source of support for the Historical Museum. Your contribution will help us collect, preserve, and display cultural and historical heritage. One-time donations can be transferred to the Museum\'s bank account:\n\n
        Bank: Raiffeisen Bank d.d. Bosna i Hercegovina, Sarajevo\n
        Account no.: 1610000004990079\n
        IBAN: BA391610000004990079\n
        SWIFT: RZBABA2S\n
        ID: 4200395820005\n\n\n
    </string>

    <string name="support5">
        Sponsors and partners\n\n
        Support the Historical Museum of Bosnia and Herzegovina as a sponsor or corporate partner by sponsoring the collection, preservation, and presentation of cultural and historical heritage. Sponsoring or partnering with one of the most highly regarded cultural institutions in the country will help you realise your philanthropic and business goals in line with the principles of social responsibility. The Museum offers different kinds of sponsorship and partnership: long-term support to departments, sections, collections, exhibitions, and exhibits. Depending on your affinities and abilities, you can opt for one or more forms of cooperation and support. For more details, contact our administrative offices by e-mail: hasimbegovic@muzej.ba, or call: + (387) 33/226 098.\n\n 
    </string>

    <string name="support6">
        Support the museum mobile application\n\n
        The Historical Museum mobile application offers not only basic information about its activities, but also unique insight into the museum’s collections. Visitors can take a virtual tour of departments and exhibitions. Exhibits are shown in high-resolution photographs. In addition, the mobile application will show artefacts that are not on display in permanent exhibitions, but that are kept in storage. Contribute to the enlargement of the Museum\'s virtual collection by making a private donation or via a sponsorship or partnership package!\n\n
    </string>

    <string name="support7">
        Artefact donations\n\n
        The donation of historically significant artefacts has always been one of the main ways in which museums enlarge their collections. The Historical Museum of Bosnia and Herzegovina is no exception: we are happy to provide exceptional care for items you think may warrant scientific attention. If you have one or more such items which you would like to donate to the museum, please get in touch via e-mail: hasimbegovic@muzej.ba or phone: + (387) 33/226 098. Please do not deliver items (by mail or in person) before our curators have had a chance to assess them.\n\n
    </string>

    <!-- END STRINGS FOR FRAGMENT_SUPPORT_US -->

    <!-- STRINGS FOR FRAGMENT_RATE -->

    <string name="rate1">Your rate leads us to improvement!</string>
    <string name="rate2">Tap a star to rate out app</string>
    <string name="ratebutton">Done</string>
    <string name="rate3">By clicking button you submit your rate</string>

    <!-- END STRINGS FOR FRAGMENT_RATE -->


    <string name="title_activity_maps">Map</string>


    <!-- STRINGS FOR FRAGMENT_NEARBY -->

    <string name="naslov">Nearby Places</string>
    <string name="txt1">National Museum\nZmaja od Bosne 3</string>
    <string name="txt2">National Thatre\nObala Kulina bana 9</string>
    <string name="txt3">Vijecnica\nObala Kulina bana</string>
    <string name="txt4">Sebilj\nBaščaršija</string>
    <string name="txt5">Gazi Husrev-beg Mosque\nSarači 8</string>
    <string name="txt6">The White Fortress</string>
    <string name="bos">Bosnian</string>

    <!-- END STRINGS FOR FRAGMENT_NEARBY -->

    <string name="explore">Explore</string>
    <string name="home">Home</string>
    <string name="about">About Museum</string>
    <string name="info">Info</string>
    <string name="wnew">What\'s new?</string>
    <string name="near">Nearby Places</string>
    <string name="contest">Photo Contest</string>
    <string name="like">Like the Museum?</string>
    <string name="rate">Rate Us</string>
    <string name="support">Support Museum</string>
    <string name="Info">Info</string>
    <string name="engl">English</string>

    <!-- BUTTONS -->

    <string name="rb">GALLERY OF INVENTIONS</string>
    <string name="lb">CHILDREN AND WAR</string>
    <string name="ub">SEIGE OF SARAJEVO</string>
    <string name="db">WORLD WAR II GALLERY</string>

    <string name="booktour">BOOK A TOUR</string>
    <string name="book">Book a Tour</string>
    <string name="send_email">Send e-mail</string>


    <string name="email2">SOME TEXT</string>
    <string name="whatsnew">Upcoming events</string>

</resources>


