<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/layout_color"
    tools:context="com.example.dana.muzej.Fragments.AboutMuseumFragment">

    <!-- TODO: Update blank fragment layout -->
    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="15dp"/>

    <TextView
        android:id="@+id/text1"
        android:layout_below="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/about1"
        android:gravity="center_horizontal|center_vertical"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:textColor="#ECEFF1"/>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text1"
       >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="400dp"
                android:layout_height="150dp"
                android:src="@drawable/about_pic"
                android:layout_marginBottom="15dp"
                />

            <TextView
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:text="@string/about2"
                android:gravity="center_horizontal|center_vertical"
                android:textSize="15sp"
                android:textColor="#ffffff"/>

            <TextView
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:text="@string/about3"
                android:gravity="center_horizontal|center_vertical"
                android:textSize="15sp"
                android:textColor="#ffffff"/>

            <TextView
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:text="@string/about4"
                android:gravity="center_horizontal|center_vertical"
                android:textSize="15sp"
                android:textColor="#ffffff"/>


            <TextView
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:text="@string/about5"
                android:gravity="center_horizontal|center_vertical"
                android:textSize="15sp"
                android:textColor="#ffffff"/>


            <TextView
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:text="@string/about6"
                android:gravity="center_horizontal|center_vertical"
                android:textSize="15sp"
                android:textColor="#ffffff"
                android:textStyle="italic"/>


            <TextView
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:text="@string/about7"
                android:gravity="center_horizontal|center_vertical"
                android:textSize="15sp"
                android:textColor="#ffffff"/>


            <TextView
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:text="@string/about8"
                android:gravity="center_horizontal|center_vertical"
                android:textSize="15sp"
                android:textColor="#ffffff"
                android:textStyle="italic"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
