<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_color"
    tools:context="com.example.dana.muzej.Fragments.SupportUsFragment">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:src="@drawable/support1"
        android:layout_alignParentRight="true"/>


    <ScrollView
        android:layout_width="220dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/support1"
                android:gravity="center_horizontal|center_vertical"
                android:textSize="10sp"
                android:textColor="#ffffff"/>

            <TextView
                android:id="@+id/text2"
                android:layout_below="@+id/text1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/support2"
                android:gravity="center_horizontal|center_vertical"
                android:textSize="20sp"
                android:textStyle="bold|italic"
                android:textColor="#ECEFF1"/>

            <TextView
                android:id="@+id/text3"
                android:layout_below="@+id/text2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/support3"
                android:gravity="center_horizontal|center_vertical"
                android:layout_gravity="bottom"
                android:textColor="#ffffff"
                android:textStyle="italic"/>

            <TextView
                android:id="@+id/text4"
                android:layout_below="@+id/text3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/support4"
                android:gravity="center_horizontal|center_vertical"
                android:layout_gravity="bottom"
                android:textColor="#ffffff"/>

            <TextView
                android:id="@+id/text5"
                android:layout_below="@+id/text4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/support5"
                android:gravity="center_horizontal|center_vertical"
                android:layout_gravity="bottom"
                android:textColor="#ffffff"/>

            <TextView
                android:id="@+id/text6"
                android:layout_below="@+id/text5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/support6"
                android:gravity="center_horizontal|center_vertical"
                android:layout_gravity="bottom"
                android:textColor="#ffffff"/>

            <TextView
                android:id="@+id/text7"
                android:layout_below="@+id/text6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/support7"
                android:gravity="center_horizontal|center_vertical"
                android:layout_gravity="bottom"
                android:textColor="#ffffff"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
