<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dana.muzej.Fragments.RateFragment"
    android:gravity="center_horizontal|center_vertical"
    android:background="@drawable/layout_color"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal|center_vertical"
        android:background="@drawable/layout_rounded"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="#4d4d4d"
            android:textStyle="bold"
            android:typeface="serif"
            android:text="@string/rate1"
            android:paddingBottom="20dp"

            />

        <RatingBar
            android:layout_width="285dp"
            android:layout_height="wrap_content"
            android:id="@+id/ratingBar"
            android:layout_gravity="center_horizontal"
            android:progressDrawable="@drawable/ratingbar_gold"
            android:paddingBottom="20dp"
            android:background="@android:color/transparent"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rate2"
            android:paddingBottom="20dp"
            android:textColor="#4d4d4d" />


        <Button
            android:id="@+id/rate"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:text="@string/ratebutton"
            android:gravity="center_horizontal|center_vertical"
            android:textSize="20dp"
            android:textColor="#4d4d4d"
            android:background="@drawable/button_selector"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rate3"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:textColor="#4d4d4d" />

    </LinearLayout>

</RelativeLayout>