<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_color"
    tools:context="com.example.dana.muzej.Fragments.NearbyFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/naslov"
        android:textColor="#ffffff"
        android:textSize="25dp"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="174dp"
                    android:src="@drawable/muzej_nearby"
                    android:layout_alignParentLeft="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt1"
                    android:textSize="15sp"
                    android:textColor="#ffffff"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:paddingLeft="20dp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="174dp"
                    android:src="@drawable/theater_nearby"
                    android:layout_alignParentLeft="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt2"
                    android:textSize="15sp"
                    android:textColor="#ffffff"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:paddingLeft="20dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="174dp"
                    android:src="@drawable/vijecnica_nearby"
                    android:layout_alignParentLeft="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt3"
                    android:textSize="15sp"
                    android:textColor="#ffffff"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:paddingLeft="20dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="174dp"
                    android:src="@drawable/sebilj_nearby"
                    android:layout_alignParentLeft="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt4"
                    android:textSize="15sp"
                    android:textColor="#ffffff"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:paddingLeft="20dp"/>
            </LinearLayout>

            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="174dp"
                    android:src="@drawable/dzamija_nearby"
                    android:layout_alignParentLeft="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt5"
                    android:textSize="15sp"
                    android:textColor="#ffffff"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:paddingLeft="20dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="174dp"
                    android:src="@drawable/bijelatabija_nearby"
                    android:layout_alignParentLeft="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt6"
                    android:textSize="15sp"
                    android:textColor="#ffffff"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:paddingLeft="20dp"/>
            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</RelativeLayout>
